@@ -9,6 +9,7 @@ Additions:
     * Add --with-api=XXX (both|legacy|eo)
     * Evil:
      - Add mkdtemp.
+     - Add evil_rename() a wrapper for rename().
     * eina:
      - Add DOCTYPE children parsing in eina_simple_xml
      - Add eina_barrier thread API
